Fix #137 remove gap on firefox (#139)

--- a/client/src/stylesheets/app.sass
+++ b/client/src/stylesheets/app.sass
@@ -6,6 +6,7 @@
 body
   background-color: $primary
   color: $body
+  overflow: hidden
 
 ul.plain
   list-style: none
